# pong

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
.pi/goals/: goal_events.jsonl
.pi/goals/archived/: goal_2026061719130125_mqi9nusy-8kwqpz.md
src/: app.rs  cli.rs  event.rs  main.rs  ping.rs  stats.rs  types.rs
src/ui/: chart.rs  footer.rs  header.rs  host_list.rs  mod.rs  stats_panel.rs
